--- a/.env.testing
+++ b/.env.testing
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=analisis
+DB_HOST=junction.proxy.rlwy.net
+DB_PORT=29739
+DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=SmurgJvRyyswoARmBjmSmNhGkZXtVTco
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
